Fixed z-index on code select menu

--- a/css/app.css
+++ b/css/app.css
@@ -106,6 +106,10 @@ body {
 /*}*/
 
 /* Hacky stuff */
+.ui-front {
+    z-index: 1000 !important;
+}
+
 .blocklySvg {
     background-color: rgba(0, 0, 0, 0.2) !important;
     /*background-color: rgba(255, 255, 255, 20) !important;*/
@@ -115,8 +119,6 @@ body {
     background-color: rgba(0, 0, 0, 0.2) !important;
     /*background-color: rgba(255, 255, 255, 20) !important;*/
 }
-
-
 
 #sample-accordion .ui-accordion-content {
     //background: #ffa500 url(images/ui-bg_inset-soft_10_285c00_1x100.png) 50% bottom repeat-x !important;
